--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -9,9 +9,9 @@
   $fg: #222;
   $red: #c0392b;
   $blue: #2980b9;
-  $gray: #95a5a6;
-  $green: #27ae60;
-  $orange: #e67e22;
+  $gray: #809394;
+  $green: #008b63;
+  $orange: #db7500;
 
   pre {
     background: $bg;
